@@ -14,11 +14,11 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 89cddad53f5b911c36cf73069dfb946279f4a818 ChangeLog
+SHA1 be7728b2b30f79ff37246ed648db7e682335ae50 ChangeLog
 SHA1 62647027745e394450492878f8d8730548d83fa2 LICENSE
 SHA1 2405b691fcb18b468ccb31cab97babb75e4d1f30 MANIFEST
-SHA1 51a62782d07a5fabf2626fe21288ddb811840b13 META.yml
-SHA1 acd55da035397f8ec7afa351e42395523890f755 Makefile.PL
+SHA1 d2453d3f0eb6577122b33818a6e82e0c89ffab6f META.yml
+SHA1 577f03f4eff2c306d992acbb546b69f0d0a90d9c Makefile.PL
 SHA1 05aead0f26b0f71a00bad5badbf390f2c92dcd1d README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 ade875b98aca4971a381d2e037ed009b52c2f8da bin/fullauto.pl
@@ -47,7 +47,7 @@ SHA1 6fed559b971e9d2f091e0776ddbb131be5225a36 inc/Module/Install/Win32.pm
 SHA1 ea528c813c3473a2674fcbed06531c2f795116ce inc/Module/Install/WriteAll.pm
 SHA1 00bb8470354d11bd7c2c74633083ebe627eb2b7e inc/Module/Install/with.pm
 SHA1 e1d3650b6801a3cb2e6de38574e9327914c96d40 install_mozrepl_plugin.ahk
-SHA1 71479b99d4ef1e9aefd238b3f55e6a13a6736a70 lib/Net/FullAuto.pm
+SHA1 e27f69ac6f3fb978c832504b4a49c716a3e053ca lib/Net/FullAuto.pm
 SHA1 cc3f8588c96516de2802c68be465447d17f781aa lib/Net/FullAuto/Custom/BackUp/README
 SHA1 5032ba28f88dbf163b0d4dd158948af9124568c9 lib/Net/FullAuto/Custom/README
 SHA1 5b1702f20efb104e3375934cf55a7438c19e109a lib/Net/FullAuto/Distro/fa_code.pm
@@ -64,11 +64,11 @@ SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1
 
-iQEcBAEBAgAGBQJTweUXAAoJEBa/9Pad787E3XYH/06TPFDlpTu2vexce+Im5wAB
-cbJKsrbcVmvTuO6OWOu6OgPhGIB97FblNk5bkoADtQcde6H/H8jYIkm5me3sjeX1
-kkiXMN8XRQV2nnqFBLq/A9X6f2OYl4Se7JmTpX89Or4UXdlgSUvq+jCMNPD8ovyK
-OSEq5Ior81TVvh9r3l/OZKQOpPqdCoRR6gCBNCXDwRY06WU2o5CASc94ldUgIdEp
-827+9005pobG2qzc3W40Z+6JxCbUKibRp17AY0gtQsGt2LUWZEpthx5osVgdT+pb
-CqERGTElr4WnONXj0L8acOE/rTGN8x5wMfus/qeEBwf4wRaKubQ/fl8FQWnxlVw=
-=wF5e
+iQEcBAEBAgAGBQJTwrJjAAoJEBa/9Pad787ET40H/A/7ovmrahKaZ4b/kxwLdoEk
+cr105/gpFGpULqMWNSG2Iek8VScGdFJGUpi+iG7SHh8mv2XRc/268ImGnkYvsGKz
+5gro/4ZH/NXFgKD2+aKcHhX+KSkLehChwJgS9L43uQMqV4GSj1dVf+EU7xDNsAEZ
+hQBSR5iUMvJ6nvrSDCiTEMBCWMnN0gzkh92GXuU/1o77ZwgwhYwbv+EtKkqUCq3E
+m2+GuLddgESJIg7VK1pCYNk+azE/hmFnSip/MNXCZtEqPrVZnmtC2CsAVqGVYSb8
+Bl06HZUaQXel8NbcyIWai9gYK0+F1u1Cb2Rkiy89kNwYxR+n65Jss2xsPx8XSL8=
+=ybf5
 -----END PGP SIGNATURE-----
