@@ -22,7 +22,7 @@ package Net::FullAuto;
 #######################################################################
 
 
-our $VERSION='0.9999999946';
+our $VERSION='0.9999999947';
 
 
 use 5.005;
