@@ -20,6 +20,13 @@
 #######################################################################
 
 
+2014-07-13  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
+        * Version 0.9999999947 released.
+
+        * New version of Term::Menus paired with this release.
+
+
 2014-07-12  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
         * Version 0.9999999946 released.
